fix: flex wrapping logic

--- a/site/src/tailwind.css
+++ b/site/src/tailwind.css
@@ -72,11 +72,11 @@ tr > td {
 
 /* docs, gallery */
 .content {
-  @apply flex flex-row px-6 pt-16 w-full
+  @apply flex flex-row;
 }
 
 .left-col {
-  @apply w-48 pr-4 whitespace-no-wrap flex-none;
+  @apply w-48 border-r border-gray-400 pr-4 whitespace-no-wrap flex-none;
 }
 
 .right-col {
@@ -86,7 +86,7 @@ tr > td {
 /* main */
 
 .main-body {
-  @apply bg-white px-4 mt-4 max-w-5xl;
+  @apply bg-white px-4 mt-4 max-w-6xl;
 }
 
 /* codesandbox */
@@ -100,16 +100,7 @@ tr > td {
 }
 
 .csbp-rendered {
-  @apply flex-1 p-4 border-dashed border-gray-400 border;
-  @screen sm {
-    @apply w-full flex-1 p-4;
-  }
-  @screen md {
-    @apply w-1/2 flex-1 p-4;
-  }
-  @screen lg {
-    @apply w-1/2 flex-initial;
-  }
+  @apply w-full flex-shrink-0 p-4 mb-2 border-dashed border-gray-400 border;
 }
 
 .csbp-rendered svg {
@@ -117,15 +108,12 @@ tr > td {
 }
 
 .csbp-code-tabs {
-  @apply flex-auto relative m-2 text-base;
-  @screen sm {
-    @apply w-full flex-1;
-  }
-  @screen md {
-    @apply w-1/2 flex-1;
-  }
-  @screen lg {
-    @apply w-1/2 flex-initial;
+  @apply flex-1 relative m-2 text-base;
+}
+
+@screen lg {
+  .csbp-rendered {
+    @apply w-6/12;
   }
 }
 
@@ -179,16 +167,6 @@ tr > td {
 
 .csbp-csb-link a:hover {
   @apply underline text-blue-800;
-}
-
-@media only screen and (max-width: 800px) {
-  .csbp-container {
-    @apply flex-wrap;
-    margin-bottom: 500px;
-  }
-  .csbp-rendered {
-    @apply m-auto;
-  }
 }
 
 @tailwind components;
